objects/EUR_CRM_POSM_Order__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>POSM Orders (EU)</relationshipLabel>
        <relationshipName>POSM_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_City__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_No_ERP__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Customer_No_ERP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer No. (ERP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Endpoint_Response_Message__c</fullName>
        <label>Endpoint Response Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Endpoint_Sync_Status__c</fullName>
        <description>Marked by Apex to FALSE if unable to sync Order to webservice</description>
        <label>Endpoint Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_Order_Items_Match_Header__c</fullName>
        <formula>IF(EUR_CRM_No_of_POSM_Order_Items__c =  EUR_CRM_Total_POSM_Order_Items__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Order Items Match Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_POSM_Order_Items__c</fullName>
        <label>No. of POSM Order Items</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Nr_JDE__c</fullName>
        <label>Order Nr. JDE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Partially processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Street__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Street__c</formula>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_POSM_Order_Items__c</fullName>
        <label>Total POSM Order Items</label>
        <summaryForeignKey>EUR_CRM_POSM_Order_Item__c.EUR_CRM_POSM_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Warehouse_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POSM_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>POSM Order (EU)</label>
    <listViews>
        <fullName>EUR_ZA_POS_Orders</fullName>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Order_Date__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Order_Status__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_No_of_POSM_Order_Items__c</columns>
        <columns>EUR_CRM_Total_POSM_Order_Items__c</columns>
        <columns>EUR_CRM_Order_Nr_JDE__c</columns>
        <columns>EUR_CRM_Remark__c</columns>
        <columns>EUR_CRM_Warehouse_Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_POSM_Order__c.EUR_ZA_POSM_Order</value>
        </filters>
        <label>EUR ZA POS Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>POSO-{0000000000}</displayFormat>
        <label>POSM Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POSM Orders (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_ZA_POSM_Order</fullName>
        <active>true</active>
        <label>EUR ZA POSM Order</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EUR_CRM_Check_if_Order_Nr_JDE_Complete</fullName>
        <active>true</active>
        <description>Validate that Order Nr. JDE contains a value, when Order Status is Finished/ Cancelled/ Partially processed.</description>
        <errorConditionFormula>AND( 
   RecordType.DeveloperName = &quot;EUR_ZA_POSM_Order&quot; , 
OR( 
ISPICKVAL( EUR_CRM_Order_Status__c , &quot;Finished&quot; ), 
ISPICKVAL( EUR_CRM_Order_Status__c , &quot;Cancelled&quot; ), 
ISPICKVAL( EUR_CRM_Order_Status__c , &quot;Partially processed&quot; ) 
), 
ISBLANK( EUR_CRM_Order_Nr_JDE__c  ) 
)</errorConditionFormula>
        <errorMessage>Order Nr. JDE is required.</errorMessage>
    </validationRules>
</CustomObject>